# bili_novel_py

./: .gitignore  LICENSE  README.md  compile.bat  main.py  pyproject.toml  requirements.txt  run.bat
epub/: packer.py
sources/: bili_novel.py
utils/: chapterlog.py  html_utils.py  http_utils.py
